--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -1,16 +1,15 @@
 @import '../../styles/variables.scss';
 
 .top {
-  position: relative;
   width: 100%;
   height: 60px;
-  background: $theme-gradient;
+  background: #05b166;
 
   .link {
     display: inline-block;
     font-size: 28px;
     padding-top: 8px;
-    color: $top-header-text-color;
+    color: #101419;
     opacity: 0.7;
     margin-left: 20px;
     font-family: 'Catamaran';
