--- a/src/styles/light-theme.scss
+++ b/src/styles/light-theme.scss
@@ -56,10 +56,7 @@ body.light {
   }
 
   .footer {
-    color: $light-gray;
-    a {
-      color: $dark-gray;
-    }
+    color: #5a5a5a;
   }
 
   // post
@@ -70,3 +67,5 @@ body.light {
     }
   }
 }
+
+
