--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -57,10 +57,15 @@ body.dark {
   }
 
   .footer {
-    color: $dark-middle-font-color;
-    a {
-      color: $dark-lightest-font-color;
-    }
+    color: #f5f5f5;
+  }
+
+  .github {
+    color: #afb5bb;
+  }
+
+  .github:hover {
+    color: #d9dcdf;
   }
 
   // post
