--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -34,3 +34,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   transition: background-color 0.3s, color 0.3s;
 }
+
+.main {
+  max-width: 85vw;
+  margin: 1em auto;
+}
