--- a/src/components/thumbnail-item/index.scss
+++ b/src/components/thumbnail-item/index.scss
@@ -2,16 +2,21 @@
 
 .thumbnail {
   display: block;
-  margin-bottom: 12px;
-  padding: 4px;
-  padding-bottom: 12px;
-  box-shadow: none;
-  transition: text-shadow 0.3s, opacity 0.4s;
-  opacity: 0;
+  border-radius: 4px;
+  padding: 0 1em;
+  transition: all ease 0.15s;
 
-  p {
-    font-size: 90%;
-    line-height: 1.4;
+  h3 {
+    font-weight: 700;
+    font-size: 22px;
+  }
+
+  &:not(:first-child) {
+    margin-top: 1.4em;
+  }
+
+  &:hover {
+    background: #e0e0e0;
   }
 }
 
