--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -12,7 +12,11 @@
     color: #101419;
     opacity: 0.7;
     margin-left: 20px;
-    font-family: 'Catamaran';
     font-weight: 800;
+    transition: all ease 0.15s;
+
+    &:hover {
+      color: #def2f7;
+    }
   }
 }
