modify dark theme's bg color

--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -1,5 +1,5 @@
 body.dark {
-  background-color: $dark-background-color;
+  background-color: #171a1f;
   text-shadow: $dark-text-shadow;
   color: $dark-light-font-color;
 
