modify main page's dark theme

--- a/src/components/theme-switch/index.scss
+++ b/src/components/theme-switch/index.scss
@@ -1,5 +1,7 @@
 .switch-container {
-  text-align: right;
+  position: absolute;
+  top: 19px;
+  right: 20px;
 
   .icon {
     text-align: center;
