--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -23,12 +23,17 @@
   src: url('../../assets/fonts/NanumSquareRoundEB.ttf');
 }
 
-* {
-  font-family: 'NanumSquareRound', sans-serif !important;
+*,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'NanumSquareRound', sans-serif;
 }
 
 body {
-  font-family: 'NanumSquareRound', sans-serif;
   font-size: 18px;
   background-color: $light-background-color;
   -webkit-text-size-adjust: antialiased;
