--- a/src/components/top/index.scss
+++ b/src/components/top/index.scss
@@ -1,10 +1,12 @@
 @import '../../styles/variables.scss';
 
 .top {
-  position: relative;
+  position: sticky;
+  top: 0;
   width: 100%;
   height: 60px;
   background: #05b166;
+  z-index: 999;
 
   .link {
     display: inline-block;
