complete post style

--- a/src/components/post-navigator/index.scss
+++ b/src/components/post-navigator/index.scss
@@ -13,9 +13,10 @@
   }
 
   a {
-    padding: 7px 16px 8px 16px;
-    border-radius: 6px;
-    font-size: 12px;
-    opacity: 0.8;
+    padding: 0.6em 0.8em;
+    border-radius: 4px;
+    font-size: 14px;
+    opacity: 0.9;
+    transition: all ease 0.13s;
   }
 }
