--- a/src/components/elements/hr/index.scss
+++ b/src/components/elements/hr/index.scss
@@ -1,8 +1,9 @@
 @import '../../../styles/variables.scss';
 
 .custom-hr {
-  margin: 64px;
-  background: $theme-gradient;
+  width: 100%;
+  margin: 3em 0;
+  background: linear-gradient(92deg, #05b166, #0552b1);
   border: none;
   height: 2px;
 }
