--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -46,3 +46,10 @@ body {
   margin: 1em auto;
   display: flex;
 }
+
+figcaption {
+  text-align: center;
+  font-size: 14px;
+  margin-top: 0.3em;
+  color: #6c7077;
+}
