--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -103,7 +103,7 @@ pre[class*='language-'] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: #616161;
+  color: #a7a7a7;
 }
 
 .token.punctuation {
