modify font color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,7 +42,7 @@ $dark-background-color: #282c35;
 $dark-link-color: #bb72ec;
 
 $dark-lightest-font-color: #fff;
-$dark-light-font-color: #eeeeee;
+$dark-light-font-color: #dedede;
 $dark-middle-font-color: #d8d7d7;
 
 $dark-text-shadow: 0 0 0.1px rgba(255, 255, 255, 0.3);
