--- a/src/styles/light-theme.scss
+++ b/src/styles/light-theme.scss
@@ -1,6 +1,6 @@
 body.light {
   background-color: $light-background-color;
-  text-shadow: $light-text-shadow;
+  color: #000000;
 
   // home
   .home-header {
