--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -33,12 +33,34 @@ h6 {
   font-family: 'NanumSquareRound', sans-serif;
 }
 
+h1 {
+  font-size: 34px;
+  margin: 42px 0 24px;
+  font-weight: 800;
+}
+
+h2 {
+  font-size: 30px;
+  margin: 38px 0 24px;
+  font-weight: 800;
+}
+
+h3 {
+  font-size: 26px;
+  margin: 32px 0 20px;
+  font-weight: 800;
+}
+
 body {
   font-size: 18px;
   background-color: $light-background-color;
   -webkit-text-size-adjust: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: background-color 0.3s, color 0.3s;
+}
+
+strong {
+  font-weight: 800;
 }
 
 .main {
