modify code's string color

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -147,7 +147,7 @@ pre[class*='language-'] {
 .token.attr-value,
 .token.regex,
 .token.variable {
-  color: #00e676;
+  color: #9ce372;
 }
 
 .token.operator,
