modify code's keyword color

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -139,7 +139,7 @@ pre[class*='language-'] {
 .token.atrule,
 .token.keyword,
 .token.builtin {
-  color: #b388ff;
+  color: #f851f2;
 }
 
 .token.string,
