--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -51,6 +51,11 @@ h3 {
   font-weight: 800;
 }
 
+p {
+  margin-bottom: 1.63em;
+  line-height: 1.8;
+}
+
 body {
   font-size: 18px;
   background-color: $light-background-color;
@@ -87,6 +92,7 @@ li {
   margin-bottom: 7px;
 }
 
-th, td {
+th,
+td {
   padding: 5px 8px !important;
 }
