--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -51,6 +51,12 @@ h3 {
   font-weight: 800;
 }
 
+h4 {
+  font-size: 22px;
+  margin: 26px 0 14px;
+  font-weight: 800;
+}
+
 p {
   margin-bottom: 1.63em;
   line-height: 1.8;
