--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -23,13 +23,13 @@
 }
 
 .gatsby-highlight-code-line {
-  background-color: hsla(207, 95%, 15%, 1);
+  background-color: #022a4b;
   display: block;
   margin-right: -1.2em;
   margin-left: -1.2em;
   padding-right: 1em;
-  padding-left: 0.75em;
-  border-left: 0.35em solid #0687f0;
+  padding-left: 1.5em;
+  border-left: 0.25em solid #0687f0;
 }
 
 blockquote {
