style: inline highlight의 font 설정 변경

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -30,6 +30,7 @@
   padding-right: 1em;
   padding-left: 1.5em;
   border-left: 0.25em solid #0687f0;
+  font-family: Hack,Fira Code,Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;
 }
 
 blockquote {
