style: inline highlight의 padding-left 속성값을 0.95rem으로 변경

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -28,9 +28,10 @@
   margin-right: -1.2em;
   margin-left: -1.2em;
   padding-right: 1em;
-  padding-left: 1.2em;
+  padding-left: 0.95em;
   border-left: 0.25em solid #0687f0;
-  font-family: Hack,Fira Code,Consolas,Monaco,Andale Mono,Ubuntu Mono,monospace;
+  font-family: Hack, Fira Code, Consolas, Monaco, Andale Mono, Ubuntu Mono,
+    monospace;
 }
 
 blockquote {
