style: 코드의 line highlight 색상 수정

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -23,13 +23,13 @@
 }
 
 .gatsby-highlight-code-line {
-  background-color: #022a4b;
+  background-color: #343e54;
   display: block;
   margin-right: -1.2em;
   margin-left: -1.2em;
   padding-right: 1em;
-  padding-left: 0.95em;
-  border-left: 0.25em solid #0687f0;
+  padding-left: 0.85em;
+  border-left: 0.35em solid #05b166;
   font-family: Hack, Fira Code, Consolas, Monaco, Andale Mono, Ubuntu Mono,
     monospace;
 }
