--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -89,6 +89,12 @@ figure {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 2.5rem;
+}
+
+img {
+  border: 1px solid #d0d9e9;
+  margin-bottom: 0.1em;
 }
 
 figcaption {
