--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -120,3 +120,23 @@ a:hover {
 .katex {
   font-size: 1.1em !important;
 }
+
+.font-1-5em {
+  font-size: 1.5em;
+}
+
+.font-2em {
+  font-size: 2em;
+}
+
+.font-2-5em {
+  font-size: 2.5em;
+}
+
+.font-3em {
+  font-size: 3em;
+}
+
+.text-center {
+  text-align: center;
+}
